--- a/WAStickersThirdParty/Base.lproj/Main.storyboard
+++ b/WAStickersThirdParty/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Sml-2X-rvl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Sml-2X-rvl">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,19 +21,62 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CD6-Ts-Zg8">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="525"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="M67-ew-auO" id="38Z-vo-dea"/>
                                     <outlet property="delegate" destination="M67-ew-auO" id="K1J-Xe-rti"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dM1-xj-Mgs">
+                                <rect key="frame" x="0.0" y="524" width="375" height="143"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5b4-4W-EVh" customClass="BlueButton" customModule="WAStickersThirdParty" customModuleProvider="target">
+                                        <rect key="frame" x="29" y="8" width="150" height="50"/>
+                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="bQh-mx-kUa"/>
+                                            <constraint firstAttribute="height" constant="50" id="xLI-bf-WXL"/>
+                                        </constraints>
+                                        <state key="normal" title="Learn More"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TJQ-d8-mUz" customClass="BlueButton" customModule="WAStickersThirdParty" customModuleProvider="target">
+                                        <rect key="frame" x="194" y="8" width="150" height="50"/>
+                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Get Wallpaper"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HFc-AE-YCs" customClass="BlueButton" customModule="WAStickersThirdParty" customModuleProvider="target">
+                                        <rect key="frame" x="29" y="73" width="317" height="50"/>
+                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Uqw-bC-YjW"/>
+                                        </constraints>
+                                        <state key="normal" title="Online shop"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="HFc-AE-YCs" secondAttribute="trailing" constant="29" id="Cmu-xA-DMI"/>
+                                    <constraint firstItem="5b4-4W-EVh" firstAttribute="leading" secondItem="dM1-xj-Mgs" secondAttribute="leading" constant="29" id="Gj4-cj-lLC"/>
+                                    <constraint firstItem="5b4-4W-EVh" firstAttribute="top" secondItem="dM1-xj-Mgs" secondAttribute="top" constant="8" id="IaD-co-Zty"/>
+                                    <constraint firstItem="TJQ-d8-mUz" firstAttribute="width" secondItem="5b4-4W-EVh" secondAttribute="width" id="RdV-Ao-L0o"/>
+                                    <constraint firstItem="TJQ-d8-mUz" firstAttribute="height" secondItem="5b4-4W-EVh" secondAttribute="height" id="TBP-gh-KvZ"/>
+                                    <constraint firstItem="TJQ-d8-mUz" firstAttribute="leading" secondItem="5b4-4W-EVh" secondAttribute="trailing" constant="15" id="UAE-9O-R1R"/>
+                                    <constraint firstItem="HFc-AE-YCs" firstAttribute="top" secondItem="5b4-4W-EVh" secondAttribute="bottom" constant="15" id="Usv-5j-Su6"/>
+                                    <constraint firstAttribute="height" constant="143" id="hb0-Ve-nGY"/>
+                                    <constraint firstItem="TJQ-d8-mUz" firstAttribute="top" secondItem="5b4-4W-EVh" secondAttribute="top" id="lWy-Bm-Arz"/>
+                                    <constraint firstItem="HFc-AE-YCs" firstAttribute="leading" secondItem="dM1-xj-Mgs" secondAttribute="leading" constant="29" id="qti-Zg-pEO"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="CD6-Ts-Zg8" firstAttribute="top" secondItem="8NA-Zm-FU0" secondAttribute="top" id="BZp-Rb-Cjh"/>
+                            <constraint firstItem="dM1-xj-Mgs" firstAttribute="leading" secondItem="8NA-Zm-FU0" secondAttribute="leading" id="Fkp-sT-B7I"/>
+                            <constraint firstAttribute="trailing" secondItem="dM1-xj-Mgs" secondAttribute="trailing" id="Hbr-bh-5XC"/>
+                            <constraint firstItem="ajP-Ty-Icd" firstAttribute="top" secondItem="dM1-xj-Mgs" secondAttribute="bottom" id="PRM-6t-Kww"/>
+                            <constraint firstItem="dM1-xj-Mgs" firstAttribute="top" secondItem="CD6-Ts-Zg8" secondAttribute="bottom" constant="-1" id="ZeC-16-zXN"/>
                             <constraint firstItem="CD6-Ts-Zg8" firstAttribute="leading" secondItem="8NA-Zm-FU0" secondAttribute="leading" id="bIs-fm-lmT"/>
-                            <constraint firstItem="CD6-Ts-Zg8" firstAttribute="bottom" secondItem="ajP-Ty-Icd" secondAttribute="top" constant="-50" id="fPF-ya-Tm9"/>
                             <constraint firstItem="CD6-Ts-Zg8" firstAttribute="trailing" secondItem="8NA-Zm-FU0" secondAttribute="trailing" id="vda-Sj-2Bg"/>
                         </constraints>
                     </view>
