--- a/WAStickersThirdParty/Base.lproj/Main.storyboard
+++ b/WAStickersThirdParty/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Sml-2X-rvl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Sml-2X-rvl">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -254,10 +254,10 @@
             </objects>
             <point key="canvasLocation" x="465" y="915"/>
         </scene>
-        <!--Wallpapers-->
+        <!--Beans Wallpapers-->
         <scene sceneID="3dQ-Bd-eUa">
             <objects>
-                <viewController title="Wallpapers" id="4UW-ka-mGB" customClass="WebViewController" customModule="WAStickersThirdParty" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Beans Wallpapers" id="4UW-ka-mGB" customClass="WebViewController" customModule="WAStickersThirdParty" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Y7V-Gu-tPD"/>
                         <viewControllerLayoutGuide type="bottom" id="dxp-vD-UxL"/>
