--- a/WAStickersThirdParty/WallpaperPage Detail/styles.css
+++ b/WAStickersThirdParty/WallpaperPage Detail/styles.css
@@ -8,229 +8,84 @@
 }
 
 .sk-asset {
-	position: absolute;
-	background-repeat: no-repeat;
+/*    position: absolute;*/
+/*    background-repeat: no-repeat;*/
 }
 
 /* Specific to WallpaperPage Detail */
 .sk-ab.sk-WallpaperPage-Detail {
 	background-color: #FFFFFF;
 	width: 375px;
-	height: 851px;
+    margin:auto;
 }
 
-.sk-asset.sk-lily_1 {
-	width: 324px;
-	height: 324px;
-	left: 0px;
-	top: 454px;
-    background-image: url("images/lily_1.png");
-}
-
-@media only screen and (min--moz-device-pixel-ratio: 2),
-only screen and (-o-min-device-pixel-ratio: 2/1),
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (min-device-pixel-ratio: 2) {
-	.sk-asset.sk-lily_1 {
-        background-image: url("images/lily_1@2x.png");
-        background-size: 166px 361px;
-	}
-}
-@media only screen and (min--moz-device-pixel-ratio: 3),
-only screen and (-o-min-device-pixel-ratio: 3/1),
-only screen and (-webkit-min-device-pixel-ratio: 3),
-only screen and (min-device-pixel-ratio: 3) {
-	.sk-asset.sk-lily_1 {
-        background-image: url("images/lily_1@3x.png");
-        background-size: 166px 361px;
-	}
-}
-.sk-asset.sk-Jack_1 {
-	width: 166px;
-	height: 361px;
-	left: 79px;
-	top: 85px;
-    background-image: url("images/Jack_1.png");
-}
-
-@media only screen and (min--moz-device-pixel-ratio: 2),
-only screen and (-o-min-device-pixel-ratio: 2/1),
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (min-device-pixel-ratio: 2) {
-	.sk-asset.sk-Jack_1 {
-        background-image: url("images/Jack_1@2x.png");
-        background-size: 166px 361px;
-	}
-}
-@media only screen and (min--moz-device-pixel-ratio: 3),
-only screen and (-o-min-device-pixel-ratio: 3/1),
-only screen and (-webkit-min-device-pixel-ratio: 3),
-only screen and (min-device-pixel-ratio: 3) {
-	.sk-asset.sk-Jack_1 {
-        background-image: url("images/Jack_1@3x.png");
-        background-size: 166px 361px;
-	}
-}
-.sk-asset.sk-Untitled-1 {
-	width: 166px;
-	height: 361px;
-	left: 253px;
-	top: 454px;
-	background-image: url("images/Untitled-1.png");
-}
-
-@media only screen and (min--moz-device-pixel-ratio: 2),
-only screen and (-o-min-device-pixel-ratio: 2/1),
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (min-device-pixel-ratio: 2) {
-	.sk-asset.sk-Untitled-1 {
-		background-image: url("images/Untitled-1@2x.png");
-		background-size: 166px 361px;
-	}
-}
-@media only screen and (min--moz-device-pixel-ratio: 3),
-only screen and (-o-min-device-pixel-ratio: 3/1),
-only screen and (-webkit-min-device-pixel-ratio: 3),
-only screen and (min-device-pixel-ratio: 3) {
-	.sk-asset.sk-Untitled-1 {
-		background-image: url("images/Untitled-1@3x.png");
-		background-size: 166px 361px;
-	}
-}
-.sk-asset.sk-The-wallpapers-are-s {
-	width: 304px;
-	height: 21px;
-	left: 93px;
-	top: 38px;
-/*    background-image: url("images/The wallpapers are s.png");*/
-}
-
-@media only screen and (min--moz-device-pixel-ratio: 2),
-only screen and (-o-min-device-pixel-ratio: 2/1),
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (min-device-pixel-ratio: 2) {
-	.sk-asset.sk-The-wallpapers-are-s {
-/*        background-image: url("images/The wallpapers are s@2x.png");*/
-/*        background-size: 304px 21px;*/
-	}
-}
-@media only screen and (min--moz-device-pixel-ratio: 3),
-only screen and (-o-min-device-pixel-ratio: 3/1),
-only screen and (-webkit-min-device-pixel-ratio: 3),
-only screen and (min-device-pixel-ratio: 3) {
-	.sk-asset.sk-The-wallpapers-are-s {
-/*        background-image: url("images/The wallpapers are s@3x.png");*/
-/*        background-size: 304px 21px;*/
-	}
-}
-.sk-asset.sk-Capsubeans-Wallpaper {
-	width: 309px;
-	height: 34px;
-	left: 91px;
-	top: 0px;
-	background-image: url("images/Capsubeans Wallpaper.png");
-}
-
-@media only screen and (min--moz-device-pixel-ratio: 2),
-only screen and (-o-min-device-pixel-ratio: 2/1),
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (min-device-pixel-ratio: 2) {
-	.sk-asset.sk-Capsubeans-Wallpaper {
-		background-image: url("images/Capsubeans Wallpaper@2x.png");
-		background-size: 309px 34px;
-	}
-}
-@media only screen and (min--moz-device-pixel-ratio: 3),
-only screen and (-o-min-device-pixel-ratio: 3/1),
-only screen and (-webkit-min-device-pixel-ratio: 3),
-only screen and (min-device-pixel-ratio: 3) {
-	.sk-asset.sk-Capsubeans-Wallpaper {
-		background-image: url("images/Capsubeans Wallpaper@3x.png");
-		background-size: 309px 34px;
-	}
-}
-.sk-asset.sk-charlie-1 {
-	width: 166px;
-	height: 361px;
-	left: 253px;
-	top: 85px;
-    background-image: url("images/charlie-1.png");
-}
-
-@media only screen and (min--moz-device-pixel-ratio: 2),
-only screen and (-o-min-device-pixel-ratio: 2/1),
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (min-device-pixel-ratio: 2) {
-	.sk-asset.sk-charlie-1 {
-        background-image: url("images/charlie-1@2x.png");
-        background-size: 166px 361px;
-	}
-}
-@media only screen and (min--moz-device-pixel-ratio: 3),
-only screen and (-o-min-device-pixel-ratio: 3/1),
-only screen and (-webkit-min-device-pixel-ratio: 3),
-only screen and (min-device-pixel-ratio: 3) {
-	.sk-asset.sk-charlie-1 {
-        background-image: url("images/charlie-1@3x.png");
-        background-size: 166px 361px;
-	}
-}
-.sk-asset.sk-Overrides-Cell-Add-Detail {
-	width: 22px;
-	height: 22px;
-	left: 213px;
-	top: 414px;
-	background-image: url("images/Overrides/Cell/Add Detail.png");
-}
-
-@media only screen and (min--moz-device-pixel-ratio: 2),
-only screen and (-o-min-device-pixel-ratio: 2/1),
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (min-device-pixel-ratio: 2) {
-	.sk-asset.sk-Overrides-Cell-Add-Detail {
-		background-image: url("images/Overrides/Cell/Add Detail@2x.png");
-		background-size: 22px 22px;
-	}
-}
-@media only screen and (min--moz-device-pixel-ratio: 3),
-only screen and (-o-min-device-pixel-ratio: 3/1),
-only screen and (-webkit-min-device-pixel-ratio: 3),
-only screen and (min-device-pixel-ratio: 3) {
-	.sk-asset.sk-Overrides-Cell-Add-Detail {
-		background-image: url("images/Overrides/Cell/Add Detail@3x.png");
-		background-size: 22px 22px;
-	}
-}
-.sk-asset.sk-Overrides-Cell-Add-Detail-Copy {
-	width: 22px;
-	height: 22px;
-	left: 388px;
-	top: 413px;
-	background-image: url("images/Overrides/Cell/Add Detail Copy.png");
-}
-
-@media only screen and (min--moz-device-pixel-ratio: 2),
-only screen and (-o-min-device-pixel-ratio: 2/1),
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (min-device-pixel-ratio: 2) {
-	.sk-asset.sk-Overrides-Cell-Add-Detail-Copy {
-		background-image: url("images/Overrides/Cell/Add Detail Copy@2x.png");
-		background-size: 22px 22px;
-	}
-}
-@media only screen and (min--moz-device-pixel-ratio: 3),
-only screen and (-o-min-device-pixel-ratio: 3/1),
-only screen and (-webkit-min-device-pixel-ratio: 3),
-only screen and (min-device-pixel-ratio: 3) {
-	.sk-asset.sk-Overrides-Cell-Add-Detail-Copy {
-		background-image: url("images/Overrides/Cell/Add Detail Copy@3x.png");
-		background-size: 22px 22px;
-	}
-}
 .sk-asset.sk-Group {
-	width: 419px;
-	height: 816px;
-	left: -62px;
-	top: 8px;
+    margin:auto;
 }
+
+p{
+    margin-top:5px;
+    line-height: 138%;
+    font-family: "STHeitiTC-Medium","PingFangTC-Regular","Helvetica";
+    font-size: 10pt;
+    text-align: left;
+}
+
+img{
+    width:166px;
+    height:361px;
+    display: inline;
+}
+
+
+
+.sk-asset.sk-Jack_1 {
+    width: 50%;
+    float: left;
+    text-align: center;
+}
+
+.sk-asset.sk-charlie-1 {
+    width: 50%;
+    float: left;
+    text-align: center;
+}
+
+.notFirstRow{
+    width: 50%;
+    float: left;
+    margin-top:5pt;
+    text-align: center;
+}
+
+@media only screen and (min--moz-device-pixel-ratio: 2),
+only screen and (-o-min-device-pixel-ratio: 2/1),
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min-device-pixel-ratio: 2) {
+    .x1{
+        display:none;
+    }
+    .x2{
+        display:inline;
+    }
+    .x3{
+        display:none;
+    }
+}
+@media only screen and (min--moz-device-pixel-ratio: 3),
+only screen and (-o-min-device-pixel-ratio: 3/1),
+only screen and (-webkit-min-device-pixel-ratio: 3),
+only screen and (min-device-pixel-ratio: 3) {
+    .x1{
+        display:none;
+    }
+    .x2{
+        display:none;
+    }
+    .x3{
+        display:inline;
+    }
+}
+
+
 
